Created migrations and seeds

--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "description": "Example of RESTful API with Fastify and Prisma ORM",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "migrate": "npx prisma migrate deploy",
+    "migrate:refresh": "npx prisma migrate reset --force --skip-seed",
+    "db:seed": "npx prisma db seed"
   },
   "author": "Nikolay Shamayko <nikolay.shamayko@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "prisma": {
+    "seed": "node prisma/seeds/index.js"
+  },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.9.1",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.26.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.9.1"
   }
 }
