Created controllers, routes and schemas

--- a/package.json
+++ b/package.json
@@ -17,9 +17,18 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/env": "^4.3.0",
     "@prisma/client": "^5.9.1",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "await-to-js": "^3.0.0",
     "bcrypt": "^5.1.1",
-    "fastify": "^4.26.0"
+    "fastify": "^4.26.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash-es": "^4.17.21",
+    "qs": "^6.11.2"
   },
   "devDependencies": {
     "prisma": "^5.9.1"
