--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+PORT=3333
+JWT_KEY=12345678901234567890123456789012
