--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "Example of RESTful API with Fastify and Prisma ORM",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.js",
+    "start:dev": "dotenv -e .env -- cross-env NODE_ENV=development nodemon index.js",
     "migrate": "npx prisma migrate deploy",
     "migrate:refresh": "npx prisma migrate reset --force --skip-seed",
-    "db:seed": "npx prisma db seed"
+    "db:seed": "npx prisma db seed",
+    "test": "dotenv -e .env.test -- cross-env NODE_ENV=test tap run --jobs=1 test/*.spec.js"
   },
   "author": "Nikolay Shamayko <nikolay.shamayko@gmail.com>",
   "license": "MIT",
   "type": "module",
   "prisma": {
     "seed": "node prisma/seeds/index.js"
+  },
+  "tap": {
+    "plugin": [
+      "tap-plugin-matchjsonschema"
+    ]
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -24,6 +30,8 @@
     "ajv-formats": "^2.1.1",
     "await-to-js": "^3.0.0",
     "bcrypt": "^5.1.1",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.3.0",
     "fastify": "^4.26.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +39,8 @@
     "qs": "^6.11.2"
   },
   "devDependencies": {
-    "prisma": "^5.9.1"
+    "prisma": "^5.9.1",
+    "tap": "^18.7.0",
+    "tap-plugin-matchjsonschema": "^1.0.1"
   }
 }
