--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@faker-js/faker": "^8.4.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/env": "^4.3.0",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^2.1.0",
     "@prisma/client": "^5.9.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
